# RamTeamAi

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  MEMORY.md  PLAN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
.claude/: launch.json  settings.example.json
.github/: CODEOWNERS
.github/workflows/: protect-donation-wallets.yml  release.yml
design/: 01-onboarding.html  02-providers.html  03-custom-api.html  04-agent-builder.html  05-topology.html  06-multiagent-chat.html  07-build.html  prototype.html  theme.css
docs/: firebase-sync.md  log-improvement-report.md  neurogate.md  release.md
scripts/: dev-with-logs.ps1  set-version.ps1  setup-updater-key.ps1  tauri-dev.bat  tauri-dev.ps1
src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: github.rs  mcp.rs  mod.rs  orchestrator.rs  project_builder.rs  provider.rs  storage.rs  vault.rs
src/components/: DebateSummary.tsx  FNeurogatee.tsx  FRamTeamAie.tsx  Frame.tsx  GithubAvatar.tsx  ProviderMonitor.tsx  RoleBadge.tsx  TeamThinking.tsx  UpdateNotice.tsx
src/config/: appMeta.ts  donationWallets.ts  neurogateReferral.ts
src/data/: seed.ts
src/diagnostics/: reporting.ts
src/integrations/: firebase.ts  github.ts
src/lib/: fileExport.ts  roles.ts  tauri.ts  theme.ts
src/mcp/: manager.ts
src/orchestrator/: agentSelection.ts  autoLoop.ts  checklist.ts  fileBlocks.ts  healthSupervisor.ts  index.ts
src/projectBuilder/: index.ts
src/providers/: index.ts  limits.ts
src/screens/: AgentBuilderScreen.tsx  BuildScreen.tsx  ChatScreen.tsx  CustomApiScreen.tsx  McpScreen.tsx  OnboardingScreen.tsx  PostBuildWorkbenchScreen.tsx  ProvidersScreen.tsx  (+2 more)
(+23 files in other folders)
