[package]
name = "Neurogate"
version = "0.1.0"
description = "Neurogate desktop AI client"
authors = ["Neurogate contributors"]
edition = "2021"

[lib]
name = "Neurogate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
keyring = { version = "3", features = ["windows-native"] }
rusqlite = { version = "0.32", features = ["bundled"] }
time = { version = "0.3", features = ["formatting"] }
thiserror = "2"
